<resources>
    <string name="app_name">Scribble Keyboard</string>
    <string name="title_activity_paint_keyboad_settings">Scribble Keyboard Settings</string>
    <string name="keyboard_detail">Scribble</string>
    <string name="setting">Settings</string>
    <string name="cant_send">You can\'t send pictures here</string>
    <string name="select_share">Select where to post</string>
    <string name="permission_write">Set permissions</string>
    <string name="cant_draw">You can\'t send pictures here</string>
    <string name="email">devpishiko@gmail.com</string>
    <string name="twitter">\@pishitaro_</string>
    <string name="developer">Developer\'s Info</string>
    <string name="jump_to_setting">Activate the keyboard</string>
    <string name="jump_to_setting_summary">Check the Scribble Keyboard checkbox in the Settings screen(First Time Must)</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="privacy_policy_summary">View Privacy Policy</string>
    <string name="share">Share</string>
    <string name="share_summary">I hope you\'ll share it with your friends.</string>
    <string name="share_content">"I drew it! #ScribbleKeyboard #おえかきキーボード https://play.google.com/store/apps/details?id=com.p4ko.paintkeyboard"</string>
</resources>