<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory app:title="@string/setting">
    <Preference
        app:title="@string/jump_to_setting"
        app:summary="@string/jump_to_setting_summary"
        app:icon="@drawable/ic_baseline_app_settings_alt_24"
        app:key="gotoIMESettings"
        >
    </Preference>
    </PreferenceCategory>
    <Preference
        app:title="@string/share"
        app:summary="@string/share_summary"
        app:icon="@drawable/ic_baseline_share_24"
        app:key="shareIntent"
        >
    </Preference>

    <PreferenceCategory app:title="@string/developer">

        <Preference
            app:title="Twitter"
            app:summary="@string/twitter"
            app:icon="@drawable/ic_baseline_alternate_email_24"
            >
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://twitter.com/pishitaro_" />
        </Preference>
        <Preference
            app:title="Mail"
            app:summary="@string/email"
            app:icon="@drawable/ic_baseline_email_24"
            app:key="sendEmail"
            >
        </Preference>
        <Preference
            app:title="@string/privacy_policy"
            app:summary="@string/privacy_policy_summary"
            app:icon="@drawable/ic_baseline_policy_24"
            >
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://paintkeyboard.p4ko.com/privacypolicy/" />
        </Preference>

    </PreferenceCategory>

</PreferenceScreen>